objects/Quote__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ITEM_STATUS_CDE__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EXP</fullName>
                </value>
                <value>
                    <fullName>OPEN</fullName>
                </value>
                <value>
                    <fullName>REF</fullName>
                </value>
                <value>
                    <fullName>REJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Load_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the load status object to coordinate record load timing and reporting.</description>
        <label>Load Status</label>
        <referenceTo>Load_Status__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MGE_PROFIT_CENTER_ABBR_NM__c</fullName>
        <label>Profit CTR Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APL</fullName>
                </value>
                <value>
                    <fullName>DTC</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MGE_PROFIT_CENTER_DESC__c</fullName>
        <label>Profit CTR Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Data Communications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MINIMUM_DELIVERY_QTY__c</fullName>
        <label>Part DEL QTY</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MINIMUM_ORDER_QTY__c</fullName>
        <label>Part MOQ QTY</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <label>Org Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRICE_ITEM_QTY__c</fullName>
        <label>Price unit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <formula>SBMT_PART_NUMBER_ID__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part (Description)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number_Text_c__c</fullName>
        <description>A text value to contain the part number in case the referenced part does not exist in the C2S org</description>
        <inlineHelpText>Text field with Part Number</inlineHelpText>
        <label>Part_Number_Text__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUOTE_DOC_CRNC_CDE__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>MXP</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QUOTE_ITEM_ENTRY_DT__c</fullName>
        <label>Quote Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QUOTE_ITEM_QTY__c</fullName>
        <label>Qty</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QUOTE_ITEM_UOM_CDE__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>SH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QUOTE_ITEM_VALUE_AMT__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QUOTE_REQUESTOR_NM_Lkp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Requester Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QUOTE_REQUESTOR_NM__c</fullName>
        <label>Quote Requester Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUOTE_REQUESTOR_PHONE_ID__c</fullName>
        <label>Quote Requester Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QUOTE_VALID_FROM_DT__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QUOTE_VALID_TO_DT__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_External_Id__c</fullName>
        <description>External Id to Uniquely identify a Quote record for upsert.</description>
        <externalId>true</externalId>
        <label>Quote External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Item_Number_Id__c</fullName>
        <label>Quote Item</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number_Id__c</fullName>
        <label>Quote Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REJECTION_DETAIL_TXT__c</fullName>
        <label>Rejection Text</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REJECTION_REASON_CDE__c</fullName>
        <label>Rejection Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>QE</fullName>
                </value>
                <value>
                    <fullName>QR</fullName>
                </value>
                <value>
                    <fullName>QZ</fullName>
                </value>
                <value>
                    <fullName>S2</fullName>
                </value>
                <value>
                    <fullName>ZA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>REJECTION_REASON_DESC__c</fullName>
        <label>Rejection Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBMT_PART_NUMBER_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PN</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USER_NM__c</fullName>
        <label>Quote Creater Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>price_per_price_unit__c</fullName>
        <formula>QUOTE_ITEM_VALUE_AMT__c / QUOTE_ITEM_QTY__c * PRICE_ITEM_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>price per price unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Quote</label>
    <nameField>
        <label>Quote  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>